--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <script>
         const authButton = document.getElementById('auth-button')
         authButton.onclick = function() {
-            window.location.replace("http://https://da-api-connection.vercel.app/auth")
+            window.location.replace("http://da-api-connection.vercel.app/auth")
         }
     </script>
 </body>
